Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/GC/GCMakePlane.h

#ifndef GC_MakePlane_H
#define GC_MakePlane_H

#include "../../Export_Import.h"

extern "C" DECL_EXPORT void* GC_MakePlane_Ctor7895386A(
	void* A2);
extern "C" DECL_EXPORT void* GC_MakePlane_Ctor9914D2AD(
	void* Pl);
extern "C" DECL_EXPORT void* GC_MakePlane_CtorE13B639C(
	void* P,
	void* V);
extern "C" DECL_EXPORT void* GC_MakePlane_CtorC2777E0C(
	double A,
	double B,
	double C,
	double D);
extern "C" DECL_EXPORT void* GC_MakePlane_Ctor10B48A70(
	void* Pln,
	void* Point);
extern "C" DECL_EXPORT void* GC_MakePlane_Ctor6FF7E7CC(
	void* Pln,
	double Dist);
extern "C" DECL_EXPORT void* GC_MakePlane_Ctor4B855FC1(
	void* P1,
	void* P2,
	void* P3);
extern "C" DECL_EXPORT void* GC_MakePlane_Ctor608B963B(
	void* Axis);
extern "C" DECL_EXPORT void* GC_MakePlane_Value(void* instance);
extern "C" DECL_EXPORT void* GC_MakePlane_Operator(void* instance);
extern "C" DECL_EXPORT void GCMakePlane_Dtor(void* instance);

#endif